Cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
project(pion_production)
find_package(Geant4 REQUIRED ui_all vis_all )
include(${Geant4_USE_FILE})
file(GLOB sources ${PROJECT_SOURCE_DIR}/src/*.cc)
file(GLOB headers ${PROJECT_SOURCE_DIR}/include/*.hh)
file(GLOB MACRO_FILES "*.mac")
file(GLOB MACRO_FILES "${PROJECT_SOURCE_DIR}/macro/*.mac")
file(COPY ${MACRO_FILES} DESTINATION ${PROJECT_BINARY_DIR})
include_directories(${PROJECT_SOURCE_DIR}/include)
add_executable(sim ${sources})
target_link_libraries(sim ${Geant4_LIBRARIES})
add_custom_target(pion_production DEPENDS sim)
